--- a/lecture_2.5/BatchApexErrorEventTriggerHandler.cls
+++ b/lecture_2.5/BatchApexErrorEventTriggerHandler.cls
@@ -1,4 +1,4 @@
-public class FlightCleanerBatchTriggerHandler {
+public class BatchApexErrorEventTriggerHandler {
     public static Boolean isFirstTime = true;
     
     public static void onAfterInsert(List<BatchApexErrorEvent> errors) {
@@ -11,7 +11,7 @@ public class FlightCleanerBatchTriggerHandler {
         List<Error_Log__c> records = new List<Error_Log__c> ();
         
         for(BatchApexErrorEvent evt : errors) {
-            if(jobs.get(evt.AsyncApexJobId).ApexClass.Name == 'FlightCleanerBatch') {
+            if(jobs.get(evt.AsyncApexJobId).ApexClass.Name == FlightCleanerBatch.class.getName()) {
                 
                 for (String item : evt.JobScope.split(',')) {
                     Error_Log__c record = new Error_Log__c(
