--- a/lecture_2.5/FlightCleanerBatch.cls
+++ b/lecture_2.5/FlightCleanerBatch.cls
@@ -4,7 +4,7 @@ public with sharing class FlightCleanerBatch implements Database.Batchable<sObje
         'FROM Flight__c ' +
         'WHERE Status__c =  \'' + Constants.FLIGHT_STATUS_DECLINED + '\'' +
         'OR CreatedDate > NEXT_N_DAYS: ' + Constants.FLIGHT_CLEANER_DAYS + '';
-    private Integer counter = 1;
+    private Integer counter;
     private Map<Id, Integer> touristOnFlight = new Map<Id, Integer> ();
     
     public Database.QueryLocator start(Database.BatchableContext bc) {
@@ -12,18 +12,24 @@ public with sharing class FlightCleanerBatch implements Database.Batchable<sObje
     }
     
     public void execute(Database.BatchableContext BC, List<Flight__c> flights) {
-        for (Flight__c flight : flights) {
-            if(touristOnFlight.containsKey(flight.Tourist__c)) {
-                counter = touristOnFlight.get(flight.Tourist__c) + 1;
-                touristOnFlight.put(flight.Tourist__c, counter);
-            } else {
-                touristOnFlight.put(flight.Tourist__c, 1);
+        Database.DeleteResult[] drflights = Database.delete(flights, false);
+        
+        for(Database.DeleteResult dr : drflights) {
+            if (dr.isSuccess()) {
+                
+                for (Flight__c flight : flights) {
+                    if(touristOnFlight.containsKey(flight.Tourist__c)) {
+                        counter = touristOnFlight.get(flight.Tourist__c) + 1;
+                        touristOnFlight.put(flight.Tourist__c, counter);
+                    } else {
+                        touristOnFlight.put(flight.Tourist__c, 1);
+                    }
+                }
             }
         }
-        delete flights;
     }
     
     public void finish(Database.BatchableContext bc) {
-        EmailService.sendEmailBatch(touristOnFlight);
+        EmailService.sendEmailFromFlightCleanerBatch(touristOnFlight);
     }
 }
