--- a/lecture_2.5/FlightCleanerSchedule.cls
+++ b/lecture_2.5/FlightCleanerSchedule.cls
@@ -1,7 +1,7 @@
 global class FlightCleanerSchedule implements Schedulable {
     global void execute(SchedulableContext ctx) {
-        FlightCleanerBatch myBatchObject = new FlightCleanerBatch();
-        Id batchId = Database.executeBatch(myBatchObject);
+        FlightCleanerBatch flightCleanerBatch = new FlightCleanerBatch();
+        Database.executeBatch(flightCleanerBatch);
     }
 }
 /*Apex-script 2.5.4
@@ -12,4 +12,4 @@ String jobID = System.schedule('Cleaning flights', sch, cleaner);
 Apex-script 2.5.4.1
 FlightCleanerSchedule cleaner = new FlightCleanerSchedule();
 String sch = '0 30 * * * ?';
-String jobID = System.schedule('Cleaning flights', sch, cleaner);*/
+String jobID = System.schedule('Cleaning flights second', sch, cleaner);*/
