--- a/lecture_2.6/WeatherForecastService.cls
+++ b/lecture_2.6/WeatherForecastService.cls
@@ -1,16 +1,16 @@
 public with sharing class WeatherForecastService {
     public class WeatherForecastException extends Exception {}
     
-    public static Map<Date, Decimal> getForecasts(Decimal latitude, Decimal longitude) {
+    public static Map<Date, Double> getForecasts(Double latitude, Double longitude) {
         HttpRequest req = new HttpRequest();
-        req.setMethod('GET');
+        req.setMethod(Constants.METHOD_HTTP_GET);
         req.setEndpoint(
-            'https://weatherbit-v1-mashape.p.rapidapi.com/forecast/daily?lat=' + latitude +
+            Constants.URL_RAPIDAPI_WEATHERBIT + '?lat=' + latitude +
             '&lon=' + longitude
         );
         req.setHeader('x-rapidapi-key', 'dbba4ce498msh0a2aa20f5b276eep1affd2jsn972508114931');
         req.setHeader('x-rapidapi-host', 'weatherbit-v1-mashape.p.rapidapi.com');
-        Map<Date, Decimal> temperatureByDate = new Map<Date, Decimal> ();
+        Map<Date, Double> temperatureByDate = new Map<Date, Double> ();
         
         try {
             Http http = new Http();
@@ -22,12 +22,12 @@ public with sharing class WeatherForecastService {
                 for (Integer i = 0; i < data.size(); i++){
                     Map<String, Object> weatherByDay = (Map<String, Object>)data[i];
                     Date validDate = Date.valueOf(String.valueOf(weatherByDay.get('valid_date')));
-                    Decimal temp = Decimal.valueOf(String.valueOf(weatherByDay.get('temp')));
+                    Double temp = Double.valueOf(String.valueOf(weatherByDay.get('temp')));
                     temperatureByDate.put(validDate, temp);
                 }
             }
-        } catch(WeatherForecastException e) {
-            System.debug(Constants.EXECEPTION_TEXT + e.getCause());
+        } catch (Exception ex) {
+            throw new WeatherForecastException(Constants.EXECEPTION_TEXT + ex.getCause());
         } 
         return temperatureByDate;
     }
