--- a/lecture_2.6/WeatherForecastUpdater.cls
+++ b/lecture_2.6/WeatherForecastUpdater.cls
@@ -27,6 +27,7 @@ public class WeatherForecastUpdater {
                     newWeather.add(weather); 
                 }
             } catch (Exception ex) {
+                System.debug(LoggingLevel.ERROR, ex.getMessage());
             } 
         }
         
