--- a/lecture_2.6/WeatherForecastUpdater.cls
+++ b/lecture_2.6/WeatherForecastUpdater.cls
@@ -26,8 +26,8 @@ public class WeatherForecastUpdater {
                     );
                     newWeather.add(weather); 
                 }
-            } catch (Exception ex) {
-                System.debug(LoggingLevel.ERROR, ex.getMessage());
+            } catch (WeatherForecastService.WeatherForecastException e) {
+                System.debug(LoggingLevel.ERROR, e.getMessage());
             } 
         }
         
