--- a/lecture_2.7/WeatherForecastServiceTest.cls
+++ b/lecture_2.7/WeatherForecastServiceTest.cls
@@ -4,14 +4,11 @@ public class WeatherForecastServiceTest {
     @IsTest
     static void getForecastsSsuccess_Test() {
         TestDataFactory.createSpacePoint();
-        ListSpace_Point__c points = TestDataFactory.getSpacePoint();
-        HttpRequest req = new HttpRequest();
-        Http http = new Http();
-        HttpResponse response = new HttpResponse();
+        List<Space_Point__c> points = TestDataFactory.getSpacePoint();
         Test.setMock(HttpCalloutMock.class, new WeatherForecastServiceMock());
                 
         Test.startTest();
-        	MapDate, Double temperatureByDate = 
+        	Map<Date, Double> temperatureByDate = 
                 WeatherForecastService.getForecasts(Double.valueOf(points.get(0).Latitude__c),
                                                     Double.valueOf(points.get(0).Longitude__c));
         Test.stopTest();
